infrastructure/configs/nginx-fabric-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
        - name: nginx-gateway-public-nishantlabs-cloud-tls
    allowedRoutes:
      namespaces:
        from: All
---
